# Project-2

./: Next Steps.txt  README.md  duel2.anim
CanadianExperienceLib/: Actor.cpp  Actor.h  CMakeLists.txt  Drawable.h  HaroldFactory.cpp  MachineDrawable.cpp  MachineDrawable.h  MachineDrawableFactory.cpp  MachineDrawableFactory.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h  ViewMachineDrawableDialog.cpp  ViewMachineDrawableDialog.h  ViewMachineStartTime.cpp  ViewMachineStartTime.h  ViewTimeline.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  IMotionSink.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineSystem.cpp  MachineSystem.h  MotionSource.cpp  MotionSource.h  Motor.cpp  Motor.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h  Snow.cpp  Snow.h  SnowBlowerBody.cpp  SnowBlowerBody.h
resources/xrc/: main.fbp  main.xrc
